@@ -1,3 +1,7 @@
+2023-12-17  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/shaders_basic_pbr.rb : Added
+
 2023-12-16  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/fd84ab3cf735a643a074780ba73559d125e35aad ) and raygui ( https://github.com/raysan5/raygui/commit/2c8dc854d4e585761c2d4c77b4abbc46d298d5be )
